<resources>
    <string name="app_name">Gesture\nPlayground</string>
    <string name="main_parents">Parents</string>
    <string name="main_title">Gesture Playground</string>
    <string name="main_subtitle">Let\'s play!</string>
    <string name="blue_chicken">Blue Chicken</string>
    <string name="brown_chicken">Brown Chicken</string>
    <string name="pink_chicken">Pink Chicken</string>
    <string name="red_chicken">Red Chicken</string>
    <string name="white_chicken">White Chicken</string>
    <string name="yellow_chicken">Yellow Chicken</string>
    <string name="parents_description">Gesture Playground is an app to teach toddlers some of the gestures needed on android devices. Toddlers learn best by playing and doing actions. Each level will have a miniature instructional video. Then the toddler will practice/play with that gesture on the level.</string>
    <string name="farm_background">Farm Background</string>
    <string name="level_one">Level One</string>
    <string name="level_two">Level Two</string>
    <string name="level_three">Level Three</string>
    <string name="level_four">Level Four</string>
    <string name="level_five">Level Five</string>
    <string name="cow_six">Cow with a six.</string>
    <string name="cow_one">Cow with a one.</string>
    <string name="cow_seven">Cow with a seven.</string>
    <string name="cow_two">Cow with a two.</string>
    <string name="cow_eight">Cow with a eight.</string>
    <string name="cow_three">Cow with a three.</string>
    <string name="cow_nine">Cow with a nine.</string>
    <string name="cow_four">Cow with a four.</string>
    <string name="cow_ten">Cow with a ten.</string>
    <string name="cow_five">Cow with a five.</string>
    <string name="great_job">Great Job!</string>
    <string name="blue_airplane">Blue Airplane</string>
    <string name="red_airplane">Red Airplane</string>
    <string name="green_airplane">Green Airplane</string>
    <string name="pink_tractor">Pink Tractor</string>
    <string name="green_tractor">Green Tractor</string>
    <string name="black_tractor">Black Tractor</string>
    <string name="red_tractor">Red Tractor</string>
    <string name="pig_up">Pig looking up.</string>
    <string name="pig_down">Pig looking down.</string>
    <string name="pig_left">Pig looking left.</string>
    <string name="pig_right">Pig looking right.</string>
    <string name="pig_up_left">Pig looking up left.</string>
    <string name="pig_down_left">Pig looking down left.</string>
    <string name="pig_up_right">Pig looking up right.</string>
    <string name="pig_down_right">Pig looking down right.</string>
    <string name="pig_side_facing">Pig side facing.</string>
    <string name="pig_surprise">Pig surprise.</string>
    <string name="pig_family">Pig family.</string>
    <string name="tractor_trailer">Blue Tractor Trailer</string>
    <string name="home_button">Home Button</string>
    <string name="play_again">Play Again</string>
</resources>
