<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_level_three"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mehequanna.gestureplayground.ui.LevelThreeActivity">


    <ImageView
        android:src="@drawable/farmbackground"
        android:id="@+id/backgroundImageView"
        android:contentDescription="@string/farm_background"
        style="@style/farm_background" />

    <TextView
        android:id="@+id/winTextView"
        style="@style/win_text" />

    <VideoView
        android:id="@+id/level3VideoView"
        android:layout_alignParentStart="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"/>

    <ImageView
        android:contentDescription="@string/blue_airplane"
        android:src="@drawable/airplaneblue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:scaleX="-1"
        android:id="@+id/sevenAirplaneBlue"
        android:visibility="invisible"
        android:layout_marginStart="27dp"
        android:layout_marginTop="11dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:contentDescription="@string/red_airplane"
        android:src="@drawable/airplanered"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:id="@+id/sixAirplaneRed"
        android:visibility="invisible"
        android:layout_alignTop="@+id/sevenAirplaneBlue"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="12dp" />

    <ImageView
        android:contentDescription="@string/pink_tractor"
        android:src="@drawable/tractorpink"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:id="@+id/oneTractorPink"
        android:visibility="invisible"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp" />

    <ImageView
        android:contentDescription="@string/black_tractor"
        android:src="@drawable/tractorblack"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:id="@+id/twoTractorBlack"
        android:visibility="invisible"
        android:layout_marginBottom="11dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/fourTractorGreen"
        android:scaleX="-1"/>

    <ImageView
        android:contentDescription="@string/tractor_trailer"
        android:src="@drawable/tractortrailer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:id="@+id/eightTractorTrailer"
        android:visibility="invisible"
        android:scaleX="-1"
        android:layout_above="@+id/fourTractorGreen"
        android:layout_alignEnd="@+id/fourTractorGreen" />

    <ImageView
        android:contentDescription="@string/red_tractor"
        android:src="@drawable/tractorred"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:id="@+id/threeTractorRed"
        android:visibility="invisible"
        android:layout_marginBottom="8dp"
        android:layout_alignBottom="@+id/twoTractorBlack"
        android:layout_alignParentStart="true" />

    <ImageView
        android:contentDescription="@string/green_tractor"
        android:src="@drawable/tractorgreen"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:id="@+id/fourTractorGreen"
        android:visibility="invisible"
        android:scaleX="-1"
        android:layout_alignBottom="@+id/oneTractorPink"
        android:layout_alignStart="@+id/sixAirplaneRed"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:contentDescription="@string/green_airplane"
        android:src="@drawable/airplanegreen"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:visibility="invisible"
        android:scaleX="-1"
        android:id="@+id/fiveAirplaneGreen"
        android:layout_below="@+id/sevenAirplaneBlue"
        android:layout_alignStart="@+id/sevenAirplaneBlue"/>

    <ImageView
        android:id="@id/playAgainButtonImageView"
        android:src="@drawable/playagainbutton"
        android:contentDescription="@string/play_again"
        style="@style/menu_buttons"
        android:visibility="invisible"
        android:layout_alignTop="@+id/eightTractorTrailer"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@id/homeButtonImageView"
        android:src="@drawable/homebutton"
        android:contentDescription="@string/home_button"
        style="@style/menu_buttons"
        android:visibility="invisible"
        android:layout_alignTop="@+id/oneTractorPink"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
