<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.mehequanna.gestureplayground.ui.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/farmbackground"
        android:id="@+id/imageView"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/farm_background" />

    <Button
        android:text="@string/main_parents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:id="@+id/parentsButton"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp"/>

    <TextView
        android:text="@string/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:textSize="35sp"
        android:id="@+id/titleTextView"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/parentsButton" />

    <TextView
        android:text="@string/main_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:id="@+id/subtitielTextView"
        android:layout_below="@+id/titleTextView"
        android:layout_toEndOf="@+id/titleTextView" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/chickenbuttonsmall"
        android:id="@+id/levelOneImageButton"
        android:layout_marginBottom="36dp"
        android:layout_alignBottom="@+id/parentsButton"
        android:layout_toStartOf="@+id/subtitielTextView"
        android:layout_marginEnd="56dp"
        style="@style/level_buttons"
        android:contentDescription="@string/level_one" />

    <!--TODO: Remove video?-->
    <VideoView
        android:id="@+id/mainVideoView"
        android:layout_alignParentStart="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:elevation="-1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"/>

</RelativeLayout>
