<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_level_two"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mehequanna.gestureplayground.ui.LevelTwoActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/farmbackground"
        android:id="@+id/imageView"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/farm_background" />

    <ImageView
        android:contentDescription="@string/white_chicken"
        android:src="@drawable/farmchickenwhite"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:id="@+id/chicken1"
        android:layout_marginEnd="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:contentDescription="@string/yellow_chicken"
        android:src="@drawable/farmchickenyellow"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:id="@+id/chicken0"
        android:layout_above="@+id/chicken1"
        android:layout_toStartOf="@+id/chicken1"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="24dp" />

    <ImageView
        android:contentDescription="@string/pink_chicken"
        android:src="@drawable/farmchickenpink"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:id="@+id/chicken3"
        android:layout_alignBottom="@+id/chicken0"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="42sp"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/chicken2"
        android:layout_marginStart="17dp"
        android:id="@+id/winTextView"
        android:textColor="#000000"/>

    <VideoView
        android:id="@+id/mainVideoView"
        android:layout_alignParentStart="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"/>

    <ImageView
        android:contentDescription="@string/blue_chicken"
        android:src="@drawable/farmchickenblue"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:id="@+id/chicken5"
        android:layout_marginStart="40dp"
        android:layout_below="@+id/chicken0"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp" />

    <ImageView
        android:contentDescription="@string/red_chicken"
        android:src="@drawable/farmchickenred"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:id="@+id/chicken2"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="30dp"
        android:layout_alignBottom="@+id/chicken4"
        android:layout_toStartOf="@+id/chicken0" />

    <ImageView
        android:contentDescription="@string/brown_chicken"
        android:src="@drawable/farmchickenbrown"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:id="@+id/chicken4"
        android:layout_alignTop="@+id/chicken5"
        android:layout_toEndOf="@+id/chicken2"
        android:layout_marginStart="25dp" />

</RelativeLayout>
